--- a/home/linca/dotfiles/hypr/hyprlock.conf
+++ b/home/linca/dotfiles/hypr/hyprlock.conf
@@ -16,14 +16,14 @@ general {
 }
 
 # uncomment to enable fingerprint authentication
-# auth {
-#     fingerprint {
-#         enabled = true
-#         ready_message = Scan fingerprint to unlock
-#         present_message = Scanning...
-#         retry_delay = 250 # in milliseconds
-#     }
-# }
+auth {
+    fingerprint {
+        enabled = true
+        ready_message = Scan fingerprint to unlock
+        present_message = Scanning...
+        retry_delay = 250 # in milliseconds
+    }
+}
 
 animations {
     enabled = true
@@ -54,7 +54,7 @@ input-field {
     rounding = 15
 
     font_family = $font
-    placeholder_text = Input password...
+    placeholder_text = password...
     fail_text = $PAMFAIL
 
     # uncomment to use a letter instead of a dot to indicate the typed password
