--- a/home/linca/dotfiles/hypr/hyprland.conf
+++ b/home/linca/dotfiles/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = kitty fish
 $fileManager = yazi
 $menu = wofi --show drun
 
