--- a/home/linca/dotfiles/waybar/config.jsonc
+++ b/home/linca/dotfiles/waybar/config.jsonc
@@ -7,9 +7,8 @@
   "spacing": 4, // Gaps between modules (4px)
   // Choose the order of the modules
   "modules-left": [
-    "hyprland/workspaces",
-    "hyprland/scratchpad",
-    "custom/media"
+    "hyprland/workspaces"
+    // "custom/media"
   ],
   "modules-center": [
     "hyprland/window"
@@ -234,16 +233,16 @@
     "on-click": "pavucontrol"
   },
   "custom/media": {
-    "format": "{icon} {text}",
+    "format": "{icon} {}",
+    "escape": true,
     "return-type": "json",
     "max-length": 40,
-    "format-icons": {
-      "spotify": "",
-      "default": "🎜"
-    },
-    "escape": true,
-    "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-    // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+    "on-click": "playerctl play-pause",
+    "on-click-right": "playerctl stop",
+    "smooth-scrolling-threshold": 10, // This value was tested using a trackpad, it should be lowered if using a mouse.
+    "on-scroll-up": "playerctl next",
+    "on-scroll-down": "playerctl previous",
+    "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null", // Script in resources/custom_modules folder
   },
   "custom/power": {
     "format": "⏻ ",
