--- a/home/linca/dotfiles/hypr/hyprland.conf
+++ b/home/linca/dotfiles/hypr/hyprland.conf
@@ -264,6 +264,10 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# Move windows
+bind = $mainMod SHIFT, left, movetoworkspace, -1
+bind = $mainMod SHIFT, right, movetoworkspace, +1
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
