kitty: make ctrl+c copy

--- a/home/linca/dotfiles/kitty/kitty.conf
+++ b/home/linca/dotfiles/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+map ctrl+c copy_and_clear_or_interrupt
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -655,7 +657,7 @@ cursor_trail 1
 #: to/from always will only affect text subsequently received by
 #: kitty.
 
-copy_on_select yes
+# copy_on_select no
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
