--- a/home/linca/dotfiles/waybar/config.jsonc
+++ b/home/linca/dotfiles/waybar/config.jsonc
@@ -24,13 +24,19 @@
     "memory",
     // "temperature",
     "backlight",
-    "keyboard-state",
+    // "keyboard-state",
     "battery",
-    "battery#bat2",
+    // "battery#bat2",
     "clock",
     "tray",
     "custom/power"
   ],
+  "cpu": {
+    "interval": 3
+  },
+  "memory": {
+    "interval": 3
+  },
   "bluetooth": {
     // "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
     "format": " {status}",
