modules: add KDE module

--- a/home/linca/dotfiles/hypr/hyprland.conf
+++ b/home/linca/dotfiles/hypr/hyprland.conf
@@ -36,8 +36,8 @@ monitor=,preferred,auto,auto
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty fish
-$fileManager = yazi
+$terminal = kitty
+$fileManager = dolphin
 $menu = wofi --show drun
 
 
