--- a/home/linca/dotfiles/hypr/hyprlock.conf
+++ b/home/linca/dotfiles/hypr/hyprlock.conf
@@ -11,7 +11,8 @@ auth {
 # BACKGROUND
 background {
     monitor =
-    path = ./hyprlock/hyprlock.png
+    path = ~/.config/hypr/hyprlock/hyprlock.png
+    # path = screenshot
     blur_passes = 3
     contrast = 0.8916
     brightness = 0.8172
@@ -29,7 +30,7 @@ general {
 # Profie-Photo
 image {
     monitor =
-    path = ./hyprlock/avatar.png
+    path = ~/.config/hypr/hyprlock/avatar.png
     border_size = 2
     border_color = rgba(255, 255, 255, 0)
     size = 130
@@ -121,7 +122,7 @@ input-field {
 # CURRENT SONG
 label {
     monitor =
-    text = cmd[update:1000] echo "$(./hyprlock/Scripts/songdetail.sh)" 
+    text = cmd[update:1000] echo "$(~/.config/hypr/hyprlock/Scripts/songdetail.sh)" 
     color = rgba(255, 255, 255, 0.6)
     font_size = 18
     font_family = JetBrains Mono Nerd, SF Pro Display Bold
