feat: add vicinae

--- a/home/linca/dotfiles/hypr/hyprland/autostart.conf
+++ b/home/linca/dotfiles/hypr/hyprland/autostart.conf
@@ -12,3 +12,4 @@
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hypridle & waybar & mako & fcitx5 & firefox & $terminal
 exec-once = [workspace 9 silent] v2rayN
+exec-once = vicinae server
