--- a/home/linca/dotfiles/hypr/hyprland/keybindings.conf
+++ b/home/linca/dotfiles/hypr/hyprland/keybindings.conf
@@ -29,7 +29,7 @@ bindm = $mainMod, mouse:273, resizewindow
 # ==============================
 # Applications
 
-bind = $mainMod, F, exec, hyprlauncher
+bind = $mainMod, F, exec, vicinae toggle
 
 $l=Launcher
 $d=[$l|Apps]
