--- a/home/linca/dotfiles/hypr/hyprland/windowrule.conf
+++ b/home/linca/dotfiles/hypr/hyprland/windowrule.conf
@@ -32,3 +32,7 @@ windowrule = workspace 3, class:dev.zed.Zed
 windowrule = workspace 3, class:code
 windowrule = opacity 0.8, class:kitty
 # windowrule = opacity 0.8, focus:true
+
+# blur
+layerrule = blur,vicinae
+layerrule = ignorealpha 0, vicinae
