--- a/home/linca/dotfiles/waybar/config.jsonc
+++ b/home/linca/dotfiles/waybar/config.jsonc
@@ -7,7 +7,8 @@
   "spacing": 4, // Gaps between modules (4px)
   // Choose the order of the modules
   "modules-left": [
-    "hyprland/workspaces"
+    "hyprland/workspaces",
+    "group/sysinfo"
     // "custom/media"
   ],
   "modules-center": [
@@ -19,31 +20,30 @@
     "pulseaudio",
     "network",
     "bluetooth",
-    "power-profiles-daemon",
-    "cpu",
-    "memory",
+    // "power-profiles-daemon",
     // "temperature",
     "backlight",
     // "keyboard-state",
     "battery",
     // "battery#bat2",
     "clock",
-    "tray",
-    "custom/power"
+    "tray"
+    // "custom/power"
   ],
-  "cpu": {
-    "interval": 3
-  },
-  "memory": {
-    "interval": 3
+  "group/sysinfo": {
+    "orientation": "horizontal",
+    "modules": [
+      "cpu",
+      "memory"
+    ]
   },
   "bluetooth": {
     // "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
     "format": " {status}",
     "format-disabled": "󰂲 disabled", // an empty format will hide the module
-    "format-off": "󰂲 off",
-    "format-connected": " x{num_connections}",
-    "format-on": " on",
+    "format-off": "󰂲",
+    "format-connected": "󰂱 x{num_connections}",
+    "format-on": "󰂯",
     "tooltip-format": "{controller_alias}\t{controller_address}",
     "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
     "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
@@ -53,7 +53,7 @@
     "disable-scroll": true,
     "all-outputs": true,
     "warp-on-scroll": false,
-    "format": "{name}: {icon}",
+    "format": "{name}:{icon}",
     "format-icons": {
       "1": "",
       "2": "",
@@ -77,16 +77,6 @@
       "locked": "",
       "unlocked": ""
     }
-  },
-  "hyprland/scratchpad": {
-    "format": "{icon} {count}",
-    "show-empty": false,
-    "format-icons": [
-      "",
-      ""
-    ],
-    "tooltip": true,
-    "tooltip-format": "{app}: {title}"
   },
   "mpd": {
     "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
@@ -117,8 +107,8 @@
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
-      "activated": "",
-      "deactivated": ""
+      "activated": " ",
+      "deactivated": " "
     }
   },
   "tray": {
@@ -137,11 +127,13 @@
     "interval": 1
   },
   "cpu": {
-    "format": "{usage}% ",
-    "tooltip": false
+    "format": "  {usage}%",
+    "tooltip": false,
+    "interval": 3
   },
   "memory": {
-    "format": "{}% "
+    "format": "  {}%",
+    "interval": 3
   },
   "temperature": {
     // "thermal-zone": 2,
@@ -176,19 +168,23 @@
       "warning": 30,
       "critical": 15
     },
-    "format": "{capacity}% {icon}",
-    "format-full": "{capacity}% {icon}",
-    "format-charging": "{capacity}% ",
-    "format-plugged": "{capacity}% ",
-    "format-alt": "{time} {icon}",
+    "format": "{icon} {capacity}%",
+    "format-charging": "󰂄 {capacity}%",
+    "format-full": "󰁹 {capacity}%",
+    "format-plugged": " {capacity}%",
+    "format-alt": "{icon} {time}",
     // "format-good": "", // An empty format will hide the module
     // "format-full": "",
     "format-icons": [
-      "",
-      "",
-      "",
-      "",
-      ""
+      "󰁺", // 10
+      "󰁻", // 20
+      "󰁼", // 30
+      "󰁽", // 40
+      "󰁾", // 50
+      "󰁿", // 60
+      "󰂀", // 70
+      "󰂁", // 80
+      "󰂂" // 90
     ]
   },
   "battery#bat2": {
@@ -207,7 +203,7 @@
   },
   "network": {
     // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) ",
+    "format-wifi": "{essid} ({signalStrength}%)  ",
     "format-ethernet": "{ipaddr}/{cidr} ",
     "tooltip-format": "{ifname} via {gwaddr} ",
     "format-linked": "{ifname} (No IP) ",
