--- a/home/linca/dotfiles/hypr/hyprland/keybindings.conf
+++ b/home/linca/dotfiles/hypr/hyprland/keybindings.conf
@@ -33,10 +33,10 @@ bind = $mainMod, F, exec, vicinae toggle
 
 $l=Launcher
 $d=[$l|Apps]
-bindd = CTRL ALT, T, $d terminal emulator, exec, $terminal
-bindd = $mainMod, E, $d file explorer , exec, $fileManager
-bindd = $mainMod, C, $d text editor , exec, $EDITOR
-bindd = $mainMod, B, $d web browser , exec, $browser
+bindd = CTRL ALT, T, $d terminal emulator, exec, uwsm app -- $terminal
+bindd = $mainMod, E, $d file explorer , exec, uwsm app -- $fileManager
+bindd = $mainMod, C, $d text editor , exec, uwsm app -- $EDITOR
+bindd = $mainMod, B, $d web browser , exec, uwsm app -- $browser
 
 # ==============================
 
