--- a/home/linca/dotfiles/hypr/hyprland/autostart.conf
+++ b/home/linca/dotfiles/hypr/hyprland/autostart.conf
@@ -10,6 +10,9 @@
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = hypridle & waybar & mako & fcitx5 & firefox & $terminal
-exec-once = [workspace 9 silent] v2rayN
-exec-once = vicinae server
+exec-once = hypridle & waybar & mako
+exec-once = uwsm app -- fcitx5
+exec-once = uwsm app -- firefox
+exec-once = uwsm app -- $terminal
+exec-once = [workspace 9 silent] uwsm app -- v2rayN
+exec-once = uwsm app -- vicinae server
