waybar as service

--- a/home/linca/dotfiles/hypr/hyprland/autostart.conf
+++ b/home/linca/dotfiles/hypr/hyprland/autostart.conf
@@ -10,9 +10,9 @@
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = hypridle & waybar & mako
+exec-once = hypridle & mako
 exec-once = uwsm app -- fcitx5
 exec-once = uwsm app -- firefox
 exec-once = uwsm app -- $terminal
 exec-once = [workspace 9 silent] uwsm app -- v2rayN
-exec-once = uwsm app -- vicinae server
+# exec-once = uwsm app -- vicinae server
