add some softwares

--- a/home/linca/dotfiles/hypr/hyprlock.conf
+++ b/home/linca/dotfiles/hypr/hyprlock.conf
@@ -93,7 +93,7 @@ label {
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     font_size = 18
-    font_family = SF Pro Display Bold
+    font_family = Noto Sans, Maple Mono NF CN
     position = 0, -130
     halign = center
     valign = center
@@ -111,7 +111,7 @@ input-field {
     inner_color = rgba(255, 255, 255, 0.1)
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    font_family = SF Pro Display Bold
+    font_family = Noto Sans, Maple Mono NF CN
     placeholder_text = <i><span foreground="##ffffff99">  password</span></i>
     hide_input = false
     position = 0, -210
