--- a/home/linca/dotfiles/hypr/hyprland/windowrule.conf
+++ b/home/linca/dotfiles/hypr/hyprland/windowrule.conf
@@ -18,21 +18,51 @@
 
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
+# Example windowrules that are useful
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+    suppress_event = maximize
+}
 
-windowrule = workspace 5, class:org.telegram.desktop
-windowrule = workspace 5, class:QQ
-windowrule = workspace 2, class:firefox
-windowrule = workspace 3, class:dev.zed.Zed
-windowrule = workspace 3, class:code
-windowrule = opacity 0.8, class:kitty
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+    name = move-hyprland-run
+
+    match:class = hyprland-run
+
+    move = 20 monitor_h-120
+    float = yes
+}
+
+windowrule = match:class org.telegram.desktop , workspace 5
+windowrule = match:class QQ                   , workspace 5 
+windowrule = match:class firefox              , workspace 2
+windowrule = match:class dev.zed.Zed          , workspace 3
+windowrule = match:class code                 , workspace 3
+windowrule = match:class kitty                , opacity 0.8
 # windowrule = opacity 0.8, focus:true
 
 # blur
-layerrule = blur,vicinae
-layerrule = ignorealpha 0, vicinae
+layerrule {
+  name = vicinae adjust
+  match:namespace = vicinae
+  blur = on
+  ignore_alpha = 0
+}
