make mako a settings

--- a/home/linca/dotfiles/hypr/hyprland/autostart.conf
+++ b/home/linca/dotfiles/hypr/hyprland/autostart.conf
@@ -10,7 +10,7 @@
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = hypridle & mako
+exec-once = hypridle
 exec-once = uwsm app -- fcitx5
 exec-once = uwsm app -- firefox
 exec-once = uwsm app -- $terminal
