add some settings

--- a/home/linca/dotfiles/hypr/hyprland/keybindings.conf
+++ b/home/linca/dotfiles/hypr/hyprland/keybindings.conf
@@ -71,7 +71,7 @@ $wm=Window Management
 $d=[$wm]
 bindd = $mainMod, Q, $d close focused window, killactive
 bindd = Alt, F4, $d close focused window, killactive
-bindd = $mainMod, Delete, $d kill hyprland session, exit
+bindd = $mainMod, Delete, $d kill hyprland session, exec, uwsm stop
 bindd = $mainMod SHIFT, F, $d Toggle floating, togglefloating
 bindd = $mainMod, G, $d toggle group, togglegroup
 bindd = Shift, F11, $d toggle fullscreen, fullscreen
