--- a/home/linca/dotfiles/hypr/hyprland.conf
+++ b/home/linca/dotfiles/hypr/hyprland.conf
@@ -34,9 +34,11 @@ monitor=,preferred,auto,auto
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = GDK_SCALE,2
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
+# env = GDK_SCALE,2
+
+# using uwsm will be conflict with env, disable it
 
 ###################
 ### PERMISSIONS ###
